style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap');
* {
    padding: 0px;
    margin: 0px;
    box-sizing: border-box;
}
html {
    background-color: rgba(252, 159, 155, 0.288);
}
header {
    background-color: rgba(105, 105, 105, 0.288);
    
}
body {
    font-family: 'Roboto', sans-serif;
    margin: 0;
    padding: 0;
}
.sub-head{
    text-align: center;
}
.recipes {
    display: flex;
    flex-direction: row;
    background-color: rgba(247, 247, 247, 0.521);
}
h1 {
    text-align: center;
}
.main-img {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 50%;
}
.mini-img{
    display: block;
    margin-left: auto;
    margin-right: auto;
    padding: 10px;
}
.recipes {
    text-align: center;
}

